--- a/client/app.head.html
+++ b/client/app.head.html
@@ -2,7 +2,14 @@
 <head>
 	<meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+<!-- bootstrap 3 -->
+<link rel="stylesheet" href="node_modules/bootstrap-block-grid/dist/bootstrap3-block-grid.min.css">
+
+
 	<title>New Resident Hub App</title>
+      
+
 
 	<!--CSS IS AUTOMATICALLY BUILT AND LOADED -->
 </head>
