Added: accounts added, users must log-in to vote, additional web copy and grid fixes

--- a/client/app.body.html
+++ b/client/app.body.html
@@ -1,11 +1,19 @@
 
 <!--main body of application-->
 
+
+
+
+
+
+
+
+
+
+
 <body>
 
-
-
-
+{{ >home }}
 
 
 <!-- LOOP OVER POLLS AND SHOW EACH-->
@@ -14,18 +22,20 @@
 
 <div class="polls">
 
-
-	{{ #each polls }}
+{{ #each polls }}
 		
 			{{ >poll }}
 	
 
 	{{ /each }}
+		
+
 
 
 </div>
 
 
-
-
 </body>
+
+
+
