phone sizes and nav fixed

--- a/client/main.html
+++ b/client/main.html
@@ -17,11 +17,11 @@
 		</div>
  
 				 <div class="col-sm-6 col-md-6 col-lg-8">
-					 <div class="top"><br><br>
+					 <div class="top"><br>
 					 <h2 class="info" style="color:#e6e6e6">New to the area or looking for a highly rated service?</h2>
 					 <br>
 					 <p class="lead" style="color:#cccccc">Our community reviews local businesses all in one spot.<br>
-														  Compare the reviews and choose a service with confidence.</p>
+					 Compare the reviews and choose a service with confidence.</p>
 					 </div> 
 				</div>
 		</div>
@@ -42,7 +42,7 @@
 					<div class=" col-md-4 col-lg-4">
 						<div class= "flex-item">
 						<h4>New Residents</h4>
-					   	<p>See which businesses poll well in 3 categories: 
+					   	<p>See which businesses poll well in 3 categories: <br>
 					   	Recommendation, Customer Service, or Price. <br>Then collect their contact information.</p>
 						</div>
 					</div>
