--- a/client/app.head.html
+++ b/client/app.head.html
@@ -1,9 +1,8 @@
 
 <head>
-	<meta charset="utf-8">
-	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>New Resident Hub App</title>
-      
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
+	
+	<title>New Resident Hub App</title>  
 	<!--CSS IS AUTOMATICALLY BUILT AND LOADED -->
 </head>
