--- a/client/app.body.html
+++ b/client/app.body.html
@@ -8,8 +8,13 @@
 {{#if Template.subscriptionsReady}}
 {{ >home }}
 {{else}}
+
 <div class="loading" style="text-align: center;"><h1>Loading...</h1></div>
+<div class="thumbnail xtra">
+	
+
 {{>spinner}}
+</div>
 {{/if}}
 
 
