Added Privacy policy

--- a/client/app.body.html
+++ b/client/app.body.html
@@ -26,7 +26,20 @@
 		{{ >poll }}
 	{{ /each }}	
 <!-- adds scroll button to top -->
-<a id="back2Top" title="Back to top" href="#">&#10148;</a>
-</div></main></body>
+
+</div>
+
+{{>footer}}
+
+</main>
+
+
+
+
+</body>
+
+
+
+
 
 
