--- a/client/app.body.html
+++ b/client/app.body.html
@@ -20,15 +20,14 @@
 
 <!-- LOOP OVER POLLS AND SHOW EACH-->
 <main role="main">
-
-<div class="polls">
+	<div class ="bcpolls">
+		<div class="polls">
 	{{ #each polls }}
 		{{ >poll }}
 	{{ /each }}	
 <!-- adds scroll button to top -->
-
 </div>
-
+	</div>
 {{>footer}}
 
 </main>
