Update headear,font and background styles

--- a/client/app.body.html
+++ b/client/app.body.html
@@ -24,7 +24,7 @@
 
 <!-- LOOP OVER POLLS AND SHOW EACH-->
 <main role="main">
-	<div id="below"><h1 class="text-primary">Polls</h1></div>
+	<div id="below"><h1 style="color:#eee">Polls</h1></div>
 <div class ="bcpolls">
 
 <div class="polls">
