--- a/client/app.head.html
+++ b/client/app.head.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	
 	<title>New Resident Hub App</title>  
+	<link href="https://fonts.googleapis.com/css?family=Sriracha|Walter+Turncoat" rel="stylesheet">
 	<!--CSS IS AUTOMATICALLY BUILT AND LOADED -->
 	
 </head>
